--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<section id="testimonials">
+		<h1>Testimonials</h1>
+		<div>
+			<p class="product">This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+			<p class="authour">- John Dev</p>
+		</div>
+		<div>
+			<p class="product">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+			<p class="authour">- Jane Smith</p>
+		</div>
+		
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
