--- a/main.html
+++ b/main.html
@@ -8,18 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<section id="testimonials">
-		<h1>Testimonials</h1>
-		<div>
-			<p class="product">This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
-			<p class="authour">- John Dev</p>
-		</div>
-		<div>
-			<p class="product">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
-			<p class="authour">- Jane Smith</p>
-		</div>
-		
-	</section>
+	 <div class="testimonial-section">
+    <h2>Testimonials</h2>
+
+    <div class="testimonial">
+      <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+      <div class="author">- John Doe</div>
+    </div>
+
+    <div class="testimonial">
+      <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+      <div class="author">- Jane Smith</div>
+    </div>
+
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
